@@ -341,6 +341,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13247: Add cp65001 codec, the Windows UTF-8 (CP_UTF8).
+
 - Issue #13226: Add RTLD_xxx constants to the os module. These constants can be
   used with sys.setdlopenflags().
 
